--- a/style.css
+++ b/style.css
@@ -2,5 +2,190 @@
     Name: Wen Qiu
     Date: May 1, 2019
     Section: CSE 154 AJ
-    This is the style.css page for the Word Master game.
+    This is the style.css page for the Word Master game
 */
+@import url('https://fonts.googleapis.com/css?family=Sunflower:300');
+
+body {
+  font-family: Sunflower, sans-serif;
+}
+
+header, #challenge-img, #submit-img, #game-view, button, #game-result {
+  color: white;
+  text-align: center;
+}
+
+h2 {
+  color: #3E3E3E;
+}
+
+header {
+  background-color: #3E3E3E;
+}
+
+header h1 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 80px;
+}
+
+main, button{
+  text-align: center;
+  font-size: 20px;
+}
+
+button, #rules {
+  border-radius: 10px;
+}
+
+button {
+  height: 50px;
+}
+
+#menu-view ol {
+  margin: auto;
+  width: 60%;
+}
+
+#menu-view > p {
+  font-size: 30px;
+}
+
+footer {
+  margin-top: 30px;
+}
+
+#rules {
+  border-style: solid;
+  border-color: #3E3E3E;
+  padding: 20px;
+  width: 80%;
+  margin: 20px auto 20px auto;
+}
+
+.instruction-row {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.instruction-row > p {
+  margin-left: 50px;
+}
+
+.submit, .challenge, #start, #submit-img, #challenge-img {
+  height: 50px;
+  border-radius: 10px;
+  flex: 0 0 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.submit, #submit-img {
+  background-color: #A80000;
+}
+
+.challenge, #challenge-img {
+  background-color: #FFAA22;
+}
+
+button.player1, button.player2 {
+  flex: 0 0 50px;
+  width: 120px;
+}
+
+.flex {
+  display: flex;
+}
+
+#start, #start-over {
+  background-color: #3AA700;
+  margin: auto;
+  width: 200px;
+}
+
+.hidden {
+  display: none;
+}
+
+.player {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.player img {
+  width: 90px;
+  height: 230px;
+  margin-bottom: 30px;
+}
+
+input {
+  margin-top: 50px;
+  margin-bottom: 20px;
+  font-size: 25px;
+  text-align: center;
+}
+
+#game-view {
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+#canvas {
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+}
+
+#answer-area {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.answer {
+  width: 300px;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  text-align: left;
+}
+
+#player1-ans p, #player2-ans p {
+  margin-top: 30px;
+}
+
+#player1-ans p {
+  margin-left: 80px;
+}
+
+#player2-ans p {
+  margin-right: 80px;
+}
+
+#player1-ans {
+  background-image: url("img/player1-answer.png");
+  text-align: left;
+}
+
+#player2-ans {
+  background-image: url("img/player2-answer.png");
+  text-align: right;
+}
+
+#middle {
+  width: 75%;
+  flex-direction: column;
+  align-items: center;
+}
+
+#game-result {
+  background-color: #3E3E3E;
+  padding: 20px;
+  border-radius: 10px;
+  width: 80%;
+}
