--- a/style.css
+++ b/style.css
@@ -10,17 +10,17 @@ body {
   font-family: Sunflower, sans-serif;
 }
 
-header, #challenge-img, #submit-img, #game-view, button, #game-result {
-  color: white;
-  text-align: center;
-}
-
 h2 {
   color: #3E3E3E;
 }
 
-header {
-  background-color: #3E3E3E;
+input {
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+footer {
+  margin-top: 30px;
 }
 
 header h1 {
@@ -29,115 +29,20 @@ header h1 {
   font-size: 80px;
 }
 
-main, button{
-  text-align: center;
-  font-size: 20px;
-}
-
-button, #rules {
-  border-radius: 10px;
-}
-
-button {
-  height: 50px;
-}
-
-#menu-view ol {
-  margin: auto;
-  width: 60%;
-}
-
-#menu-view > p {
-  font-size: 30px;
-}
-
-footer {
-  margin-top: 30px;
-}
-
 #rules {
   border-style: solid;
   border-color: #3E3E3E;
-  padding: 20px;
-  width: 80%;
   margin: 20px auto 20px auto;
-}
-
-.instruction-row {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.instruction-row > p {
-  margin-left: 50px;
-}
-
-.submit, .challenge, #start, #submit-img, #challenge-img {
-  height: 50px;
-  border-radius: 10px;
-  flex: 0 0 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.submit, #submit-img {
-  background-color: #A80000;
-}
-
-.challenge, #challenge-img {
-  background-color: #FFAA22;
-}
-
-button.player1, button.player2 {
-  flex: 0 0 50px;
-  width: 120px;
-}
-
-.flex {
-  display: flex;
-}
-
-#start, #start-over {
-  background-color: #3AA700;
-  margin: auto;
-  width: 200px;
 }
 
 #start-over {
   margin-top: 20px;
 }
 
-.hidden {
-  display: none;
-}
-
-.player {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.player img {
-  width: 90px;
-  height: 230px;
-  margin-bottom: 30px;
-}
-
-input {
-  margin-top: 50px;
-  margin-bottom: 20px;
-  font-size: 25px;
-  text-align: center;
-}
-
 #game-view {
-  flex-direction: column;
   justify-content: center;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #canvas {
@@ -149,26 +54,6 @@ input {
 #answer-area {
   width: 100%;
   justify-content: space-between;
-}
-
-.answer {
-  width: 300px;
-  height: 150px;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  text-align: left;
-}
-
-#player1-ans p, #player2-ans p {
-  margin-top: 30px;
-}
-
-#player1-ans p {
-  margin-left: 80px;
-}
-
-#player2-ans p {
-  margin-right: 80px;
 }
 
 #player1-ans {
@@ -183,13 +68,120 @@ input {
 
 #middle {
   width: 75%;
-  flex-direction: column;
   align-items: center;
 }
 
-#game-result {
-  background-color: #3E3E3E;
-  padding: 20px;
+#menu-view ol {
+  margin: auto;
+  width: 60%;
+}
+
+#menu-view > p {
+  font-size: 30px;
+}
+
+#player1-ans p {
+  margin-left: 80px;
+}
+
+#player2-ans p {
+  margin-right: 80px;
+}
+
+.flex {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+.player {
+  justify-content: center;
+  align-items: center;
+}
+
+.answer {
+  width: 300px;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  text-align: left;
+}
+
+.instruction-row {
+  width: 90%;
+  margin: auto;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.instruction-row > p {
+  margin-left: 50px;
+}
+
+.player img {
+  width: 90px;
+  height: 230px;
+  margin-bottom: 30px;
+}
+
+header, main, button, input  {
+  text-align: center;
+  font-size: 20px;
+}
+
+button, #submit-img, #challenge-img {
+  height: 50px;
+}
+
+button, #submit-img, #challenge-img, #game-result, #rules {
   border-radius: 10px;
+}
+
+header, button, #challenge-img, #submit-img, #game-view, #game-result {
+  color: white;
+  text-align: center;
+}
+
+header, #game-result {
+  background-color: #3E3E3E;
+}
+
+#start, #start-over {
+  background-color: #3AA700;
+  margin: auto;
+  width: 200px;
+}
+
+#rules, #game-result {
+  padding: 20px;
   width: 80%;
+}
+
+#player1-ans p, #player2-ans p {
+  margin-top: 30px;
+}
+
+#game-view, #middle, .player {
+  flex-direction: column;
+}
+
+#start, #submit-img, #challenge-img, .submit, .challenge {
+  flex: 0 0 100px;
+  justify-content: center;
+  align-items: center;
+}
+
+#submit-img, .submit {
+  background-color: #A80000;
+}
+
+#challenge-img, .challenge {
+  background-color: #FFAA22;
+}
+
+button.player1, button.player2 {
+  flex: 0 0 50px;
+  width: 120px;
 }
