--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ input {
 }
 
 footer {
-  margin-top: 30px;
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
 }
 
 header h1 {
@@ -126,7 +128,7 @@ header h1 {
   margin-bottom: 30px;
 }
 
-header, main, button, input  {
+header, main, button, input, footer p {
   text-align: center;
   font-size: 20px;
 }
@@ -150,7 +152,8 @@ header, #game-result {
 
 #start, #start-over {
   background-color: #3AA700;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 200px;
 }
 
